# meridian

./: .gitignore  AGENTS.md  CODEMAP.md  CONVENTIONS.md  SCQA_Trading_System.md  TRADER_GUIDE.md  spec.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260201190000_create_core_schema.py  20260201194000_add_metals_knowledge_unique.py  20260201201000_add_historical_cases_unique.py  20260201205000_add_macro_events_unique.py  20260201211000_add_economic_events_unique.py  20260201213000_add_daily_prices_and_ratios.py  20260201220000_add_market_context.py  20260201230000_add_quantitative_impacts.py
backend/app/: main.py
backend/app/analysis/: __init__.py  asset_discovery.py  conviction.py  historical.py  macro_event_analysis.py  market_context.py  significance.py  time_horizons.py  transmission.py  transmission_channels.py
backend/app/api/: __init__.py  dashboard.py  digest.py  events.py  theses.py
backend/app/core/: logging.py  settings.py
backend/app/data/: __init__.py  core_watchlist.py
backend/app/db/: embeddings.py  seed_cases.py  (+2 more)
backend/tests/: test_core_watchlist.py  test_daily_digest.py  test_economic_calendar.py  test_events_api.py  test_fed_ingestion.py  test_health.py  test_historical_matching.py  test_macro_event_analysis.py  test_market_context.py  test_price_ingestion.py  test_rss_ingestion.py  test_scheduler.py  test_seed_cases.py  test_seed_metals.py  test_significance_scoring.py  test_telegram_bot.py  test_thesis_workspace.py  test_time_horizons.py  test_transmission.py
(+92 files in other folders)
