[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-backend"
version = "0.1.0"
description = "Meridian FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "psycopg[binary]>=3.1",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
